fix: logic && links

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -92,8 +92,10 @@ function isActiveLink(href: string): boolean {
     </div>
 
     <div class="navbar-end flex md:gap-20 gap-4">
+      <!-- lien direct car 1 seul pricing disponible -->
       <a
-        href={getRelativeLocaleUrl(locale) + "#tickets"}
+        href="https://www.helloasso.com/associations/angular-nexus/evenements/ng-baguette-conf-2026"
+        target="_blank"
         class="btn btn-sm btn-primary"
       >
         <img src="/icons/ticket.png" class="w-5 h-5" alt="" />
