--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -272,18 +272,18 @@ import { displayDate } from "../../utils";
                     vendredi 29 mai
                   </p>
                   <span class="text-4xl font-bold mb-6">€{TICKET_PRICE}</span>
-                  {OPEN_TICKET_SALE_DATE ? (
-                    new Date() >= new Date(OPEN_TICKET_SALE_DATE)
-                  ) : false ? (
+                  {OPEN_TICKET_SALE_DATE &&
+                  new Date() >= new Date(OPEN_TICKET_SALE_DATE) ? (
                     TICKET_SOLD_OUT ? (
                       <p class="text-base-content/60 text-sm">Complet</p>
                     ) : (
-                      <button
+                      <a
                         class="btn btn-primary w-full"
-                        onclick="document.getElementById('ticket-modal').showModal()"
+                        href={HELLOASSO_LINK}
+                        target="_blank"
                       >
                         Obtenir votre billet
-                      </button>
+                      </a>
                     )
                   ) : (
                     <p class="text-base-content/60 text-sm text-center">
